// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays an image 1`] = `
<a
  className="link"
  onClick={[Function]}
>
  <div
    className="comment-card bdy-lt-sm"
  >
    <div
      className="comment-header"
    >
      <RoundImage
        large={true}
        url="foo.jpg"
      />
      <Highlight
        component="span"
        highlightClassName="highlight"
        term="foo"
      >
        <div
          className="comment-meta"
        >
          <span
            className="person-name person-name"
          >
            Joe Smith
          </span>
           commented on 
          <span
            className="post-title person-name person-name"
          >
            Awesome Sauce #hashtag
          </span>
        </div>
      </Highlight>
      <span
        className="date"
      >
        just now
      </span>
    </div>
    <img
      className="comment-image"
      onClick={[Function]}
      src="jam.png"
    />
    <div
      className="comment-footer"
    />
  </div>
</a>
`;

exports[`matches last snapshot 1`] = `
<a
  className="link"
  onClick={[Function]}
>
  <div
    className="comment-card bdy-lt-sm"
  >
    <div
      className="comment-header"
    >
      <RoundImage
        large={true}
        url="foo.jpg"
      />
      <Highlight
        component="span"
        highlightClassName="highlight"
        term="foo"
      >
        <div
          className="comment-meta"
        >
          <span
            className="person-name person-name"
          >
            Joe Smith
          </span>
           commented on 
          <span
            className="post-title person-name person-name"
          >
            Awesome Sauce #hashtag
          </span>
        </div>
      </Highlight>
      <span
        className="date"
      >
        just now
      </span>
    </div>
    <Connect(ClickCatcher)>
      <Highlight
        component="span"
        highlightClassName="highlight"
        term="foo"
      >
        <div
          className="comment-body bdy-lt-sm"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>text of the comment. a long one. text of the comment. a long one. text of the comment. a long one. text of the comment. a long one. text of the …</p>",
            }
          }
        />
      </Highlight>
    </Connect(ClickCatcher)>
    <div
      className="comment-footer"
    />
  </div>
</a>
`;

exports[`matches last snapshot with different config 1`] = `
<a
  className="link"
  onClick={[Function]}
>
  <div
    className="comment-card bdy-lt-sm expanded"
  >
    <div
      className="comment-header"
    >
      <RoundImage
        large={true}
        url="foo.jpg"
      />
      <Highlight
        component="span"
        highlightClassName="highlight"
        term="foo"
      >
        <div
          className="comment-meta"
        >
          <span
            className="person-name person-name"
          >
            Joe Smith
          </span>
           commented on 
          <span
            className="post-title person-name person-name"
          >
            Awesome Sauce #hashtag
          </span>
        </div>
      </Highlight>
      <span
        className="date"
      >
        just now
      </span>
    </div>
    <Connect(ClickCatcher)>
      <Highlight
        component="span"
        highlightClassName="highlight"
        term="foo"
      >
        <div
          className="comment-body bdy-lt-sm"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>text of the comment. a long one. text of the comment. a long one. text of the comment. a long one. text of the comment. a long one. text of the comment. a long one. text of the comment. a long one. Irrelevant Change</p>",
            }
          }
        />
      </Highlight>
    </Connect(ClickCatcher)>
    <div
      className="comment-footer"
    >
      <span>
        <Icon
          className="reply-button"
          green={true}
          name="Reply"
        />
         Reply
      </span>
    </div>
  </div>
</a>
`;
